# wes-2025

./: .gitignore  .gitmodules  README.md
.github/workflows/: esp32-pr-build.yml
code template/: CMakeLists.txt
code template/main/: app_main.c
ivi_projekt/: Makefile  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig2.backup
ivi_projekt/components/WiFi/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
ivi_projekt/components/comms/: comms.c  comms.h
ivi_projekt/components/front_sensor/: CMakeLists.txt  front_sensor.c  front_sensor.h
ivi_projekt/components/gpio_button/: gpio_button.c
ivi_projekt/components/gui/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.sll.orig  esp32_gui.spj  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
ivi_projekt/components/gui/squareline/project/images/: ui_img_841796653.c  ui_img_defrost_16x16_png.c  ui_img_defrost_32x32_png.c  ui_img_home32_png.c  ui_img_home_full_png.c  ui_img_hvac_background_280x205_png.c  ui_img_hvac_background_320x240_png.c  ui_img_hvac_vents_120x160_png.c  ui_img_hvac_vents_240x205_png.c  ui_img_park32_png.c  ui_img_radio32_png.c  ui_img_seats_driver_240x180_png.c  ui_img_seats_pass_240x180_png.c  ui_img_temp32_png.c
ivi_projekt/components/gui/squareline/project/screens/: ui_ACControlScreen.c  ui_DriverSeatCtrlScreen.c  ui_FrontSensorScreen.c  ui_HVACScreen.c  ui_Home_Scr.c  ui_PassSeatCtrlScreen.c  ui_RadioScreen.c
ivi_projekt/main/: CMakeLists.txt  app_main.c
template/: sdkconfig  sdkconfig.bytelab
template/main/: CMakeLists.txt  Kconfig  app_main.c
(+54 files in other folders)
